<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="add_category">Add Category</string>
    <string name="category_type">Category Type</string>
    <string name="category_name">Category Name</string>
    <string name="category_icon">Category Icon</string>
    <string name="parent_category">Parent Category</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string-array name="in_out_array">
        <item>Income</item>
        <item>Outcome</item>
    </string-array>

    <string-array name="icon_array">
        <item>"@drawable/bank"</item>
        <item>"@drawable/coffe"</item>
        <item>"@drawable/food"</item>
        <!-- Add more icon options as needed -->
    </string-array>
</resources>